5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1734_2498.log
== TEST (2019-05-09 18:55:05) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a<=b):
	p= a*percentualb/100
	p1=a>=percentualb
	print(p1)

-- OUTPUT:
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:04:12) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a * percentualb/100
	p1= a + p
	t= t > a
	print(p1)

-- OUTPUT:
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
276415.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:08:51) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a * percentualb/100
	p1= a - b
	t= 2 * a
	ano= ano + 1
	print(ano)

-- EXECUTION TIME:
0.569396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2498/main.py", line 11, in <module>
    ano= ano + 1
NameError: name 'ano' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:08:58) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a * percentualb/100
	p1= a - b
	t= 2 * a
	ano= ano + 1
	print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    ano= ano + 1
NameError: name 'ano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:12:15) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a + a * (percentualb/100)
	p1= b + b * (percentualb/100)
	t= t + 1
	print(t)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:14:59) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")

t=0
while(a > 0):
	p= a + a * (percentualb/100)
	p1= b + b * (percentualb/100)
	t= t + 1
print(t)

-- EXECUTION TIME:
1.71452
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 6
    t=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:15:01) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")

t=0
while(a > 0):
	p= a + a * (percentualb/100)
	p1= b + b * (percentualb/100)
	t= t + 1
print(t)

-- EXECUTION TIME:
2.44717
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 6
    t=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:15:39) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")

t=0
while(a < b):
	p= a + a * (percentualb/100)
	p1= b + b * (percentualb/100)
	t= t + 1
print(t)

-- EXECUTION TIME:
1.19898
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 6
    t=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:17:41) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")
ca=a
cb=b
t=0
while(ca < cb):
	p= ca + ca * (percentualb/100)
	p1= cb + cb * (percentualb/100)
	t= t + 1
print(t)

-- EXECUTION TIME:
0.871552
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 5
    ca=a
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:18:27) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")
ca=a
cb=b
t=0
while(ca<cb):
	p= ca+ca*(percentualb/100)
	p1= cb+cb*(percentualb/100)
	t= t+1
print(t)

-- EXECUTION TIME:
1.48051
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 5
    ca=a
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:19:17) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")
						
ca=a
cb=b
t=0
						
while(ca<cb):
	ca=ca+ca*(percentualb/100)
	cb=cb+cb*(percentualb/100)
	t= t+1
print(t)

-- EXECUTION TIME:
1.46752
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 6
    ca=a
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:19:37) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")
						
ca=a
cb=b
t=0
						
while(ca<cb):
	ca=ca+ca*(percentualb/100)
	cb=cb+cb*(percentualb/100)
	t= t+1
print(t)

-- ERROR:
File "XXXX", line 6
    ca=a
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:20:06) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")
ca=a
cb=b
t=0
						
while(ca<cb):
	ca=ca+ca*(percentualb/100)
	cb=cb+cb*(percentualb/100)
	t= t+1
print(t)

-- EXECUTION TIME:
1.36659
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 5
    ca=a
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:20:08) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")
ca=a
cb=b
t=0
						
while(ca<cb):
	ca=ca+ca*(percentualb/100)
	cb=cb+cb*(percentualb/100)
	t= t+1
print(t)

-- ERROR:
File "XXXX", line 5
    ca=a
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:20:36) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")
						
t=0
						
while(ca<cb):
	ca=ca+ca*(percentualb/100)
	cb=cb+cb*(percentualb/100)
	t= t+1
print(t)

-- EXECUTION TIME:
1.57605
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 6
    t=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:20:51) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")
						
t=0
						
while(ca<cb):
	ca=a+a*(percentualb/100)
	cb=b+b*(percentualb/100)
	t= t+1
print(t)

-- ERROR:
File "XXXX", line 6
    t=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:21:02) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
t=0						
while(ca<cb):
	ca=a+a*(percentualb/100)
	cb=b+b*(percentualb/100)
	t= t+1
print(t)

-- ERROR:
File "XXXX", line 5
    t=0						
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:21:12) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
t=0						
while(ca<cb):
	ca=a+a*(percentualb/100)
	cb=b+b*(percentualb/100)
	t= t+1
print(t)

-- EXECUTION TIME:
0.945011
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 5
    t=0						
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:21:44) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
t=0						
while(ca<cb):
	a=a+a*(percentualb/100)
	b=b+b*(percentualb/100)
	t= t+1
print(t)

-- ERROR:
File "XXXX", line 5
    t=0						
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:22:04) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
t=0						
while(ca<cb):
	a=a+a*(percentualb/100)
	b=b+b*(percentualb/100)
	t= t+1
print(t)

-- ERROR:
File "XXXX", line 5
    t=0						
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:22:18) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
t=0						
while(a<b):
	a=a+a*(percentualb/100)
	b=b+b*(percentualb/100)
	t= t+1
print(t)

-- ERROR:
File "XXXX", line 5
    t=0						
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:23:06) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a * percentualb/100
	p1= a + p
	t= t > a
	print(p1)

-- EXECUTION TIME:
1154.2
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:28:25) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
t=0						
while(a<b):
	a= a + a*(percentuala/100)
	b=b+b*(percentualb/100)
	t= t+1
print(t)

-- EXECUTION TIME:
1.69037
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 5
    t=0						
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:28:32) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
t=0						
while(a<b):
	a= a + a*(percentuala/100)
	b=b+b*(percentualb/100)
	t= t+1
print(t)

-- ERROR:
File "XXXX", line 5
    t=0						
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:28:34) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
t=0						
while(a<b):
	a= a + a*(percentuala/100)
	b=b+b*(percentualb/100)
	t= t+1
print(t)

-- EXECUTION TIME:
1.1823
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 5
    t=0						
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:29:03) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
ano=0						
while(a<b):
	a= a + a*(percentuala/100)
	b=b+b*(percentualb/100)
	ano= ano + 1
print(t)

-- EXECUTION TIME:
0.594937
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 5
    ano=0						
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:29:08) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
ano=0						
while(a<b):
	a= a + a*(percentuala/100)
	b=b+b*(percentualb/100)
	ano= ano + 1
print(t)

-- ERROR:
File "XXXX", line 5
    ano=0						
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:29:37) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
ano=0						
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(t)

-- EXECUTION TIME:
1.62425
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 5
    ano=0						
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:29:38) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")						
ano=0						
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(t)

-- ERROR:
File "XXXX", line 5
    ano=0						
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:29:51) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:")											
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(t)

-- ERROR:
File "XXXX", line 5
    while(a<b):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:30:12) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
ano=0
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(t)

-- EXECUTION TIME:
1.47094
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2498/main.py", line 10, in <module>
    print(t)
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:30:13) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
ano=0
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(t)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:30:15) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
ano=0
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(t)

-- EXECUTION TIME:
2.46888
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2498/main.py", line 10, in <module>
    print(t)
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:30:16) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
ano=0
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(t)

-- EXECUTION TIME:
2.76056
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2498/main.py", line 10, in <module>
    print(t)
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:30:16) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
ano=0
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(t)

-- EXECUTION TIME:
1.594
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1734/2498/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:30:50) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
ano=0
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(ano)

-- EXECUTION TIME:
1.12127
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:40:05) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a * percentualb/100
	p1= a - b
	t= 2 * a
	print(t)

-- EXECUTION TIME:
1820.77
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:44:05) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a + a * (percentualb/100)
	p1= b + b * (percentualb/100)
	t= t + 1
	print(t)

-- EXECUTION TIME:
1918.44
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:44:05) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a + a * (percentualb/100)
	p1= b + b * (percentualb/100)
	t= t + 1
	print(t)

-- EXECUTION TIME:
1914.94
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:45:02) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a + a * (percentualb/100)
	p1= b + b * (percentualb/100)
	t= t + 1
print(t)

-- EXECUTION TIME:
1850.72
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:45:02) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
acumuladora=a
t=0
while(a > 0):
	p= a + a * (percentualb/100)
	p1= b + b * (percentualb/100)
	t= t + 1
print(t)

-- EXECUTION TIME:
1845.66
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:19) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
ano=0
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(ano)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:50) 
-- CODE:
a=int(input("digite a cidade:"))
b=int(input("digite a cidade:"))
percentuala=float(input("digite o p:"))
percentualb=float(input("digite o p:"))
ano=0
while(a<b):
	a= a + a*(percentuala/100)
	b=b + b*(percentualb/100)
	ano= ano + 1
print(ano)

-- EXECUTION TIME:
0.174754
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
